This file documents the revision history for Perl web application Veduta.

{{$NEXT}}

    - Show boundaries only for lkr and gmd  

0.06      2016-04-05 14:25:59+02:00 Europe/Berlin

    - Clicking on the list get down to the next deeper admin unit

0.05      2016-04-03 22:00:53+02:00 Europe/Berlin

    - Sort list entries from selected admin unit on first position

0.04      2016-04-02 17:16:10+02:00 Europe/Berlin

    - Activate Mousewheel, add attribution information

0.03      2016-04-01 12:47:08+02:00 Europe/Berlin

    - Zoom to administrative unit

0.02      2016-04-01 09:29:09+02:00 Europe/Berlin

    - Open link to repo by clicking on thumbnail

0.01      2016-04-01 08:07:21+02:00 Europe/Berlin

    - Initial revision