@@ -78,11 +78,11 @@
     <script src="bower_components/angular-touch/angular-touch.js"></script>
     <script src="bower_components/angular-bootstrap/ui-bootstrap-tpls.js"></script>
     <!-- endbower -->
-    <!-- <script src="bower_components/angular-openlayers-directive/dist/angular-openlayers-directive.min.js"></script> -->
-    <script src="bower_components/openlayers3/build/ol-debug.js"></script> 
+    <script src="bower_components/angular-openlayers-directive/dist/angular-openlayers-directive.min.js"></script>
+    <!-- <script src="bower_components/openlayers3/build/ol-debug.js"></script> -->
     <!-- <script src="bower_components/angular-openlayers-directive/dist/angular-openlayers-directive.js"></script> -->
-    <!-- <script src="bower_components/openlayers3/build/ol.js"></script> -->
-    <script src="bower_components/angular-openlayers-directive/src/directives/openlayers.js"></script>
+    <script src="bower_components/openlayers3/build/ol.js"></script>
+    <!-- <script src="bower_components/angular-openlayers-directive/src/directives/openlayers.js"></script>
     <script src="bower_components/angular-openlayers-directive/src/directives/center.js"></script>
     <script src="bower_components/angular-openlayers-directive/src/directives/control.js"></script>
     <script src="bower_components/angular-openlayers-directive/src/directives/extent.js"></script>
@@ -92,7 +92,7 @@
     <script src="bower_components/angular-openlayers-directive/src/directives/view.js"></script>
     <script src="bower_components/angular-openlayers-directive/src/services/olData.js"></script>
     <script src="bower_components/angular-openlayers-directive/src/services/olHelpers.js"></script>
-    <script src="bower_components/angular-openlayers-directive/src/services/olMapDefaults.js"></script>
+    <script src="bower_components/angular-openlayers-directive/src/services/olMapDefaults.js"></script> -->
     <!-- endbuild -->
 
         <!-- build:js({.tmp,app}) scripts/scripts.js -->
